--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="icon_back">&#xe921;</string>
     <string name="icon_more">&#xe917;</string>
+
+    <string name="title">All Offers</string>
+    <string name="sub_title">EveryWhere</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
